--- a/project/learn-express/package.json
+++ b/project/learn-express/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/zengxp0605/nodejs#readme",
   "dependencies": {
+    "ejs": "^2.4.1",
     "express": "^4.13.4"
   }
 }
